--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Card Design</title>
 </head>
 
-<body class="m-36 p-24 grid grid-cols-2 gap-2 border-2">
+<body class="mx-36 p-24 grid grid-cols-2 gap-2 ">
     <div class="w-[336px] h-[201.6px] border-2 relative ">
 
         <div class="flex justify-between mt-[3px] mx-2 ">
